@@ -1,5 +1,6 @@
 - draksound:
   o enable to set 5.1 channels (#38796)
+- scannerdrake: fix undefined variable $in (#36387, #37039)
 
 Version 10.11 - 11 March 2008
 
